Practica1: soluciones parciales

--- a/Practica2.qmd
+++ b/Practica2.qmd
@@ -64,95 +64,113 @@ head(diabetes)
 
 ## 1.2 ¿Cuántas variables tiene el fichero diabetes?
 
-```{r include=FALSE}
+```{r include=TRUE}
 dim(diabetes)
 ```
 
 ## 1.3 ¿De qué tipo es cada variable?
 
-```{r include=FALSE}
+```{r include=TRUE}
 str(diabetes)
 ```
 
 ## 1.4 ¿Cuántas categorías tiene la variable `frame`?
 
-```{r include=FALSE}
+```{r include=TRUE}
 levels(diabetes$frame)
 ```
 
 ## 1.5 Obtén una tabla de frecuencias absolutas y relativas para la variable `frame`.
 
-```{r include=FALSE}
+**NOTA**: Primero debemos reordenar los niveles de la variable.
+
+```{r include=TRUE}
+diabetes$frame <- ordered(diabetes$frame,
+                          levels=c("small","medium","large"))
+```
+
+```{r include=TRUE}
 table(diabetes$frame)
-table(diabetes$frame)/nrow(diabetes)
+100*table(diabetes$frame)/nrow(diabetes)
 ```
 
 ## 1.6 Realiza una representación gráfica adecuada para la variable `frame`. ¿Qué información obtienes?
 
-```{r include=FALSE}
-X <- table(diabetes$frame)
+```{r include=TRUE}
+n <- table(diabetes$frame)
 
 # Diagrama de barras
-barplot(X, xlab="Frame", ylab="Frecuencias abs.", col=topo.colors(3))
-legend("topright", legend=levels(diabetes$frame), fill=topo.colors(3))
+barplot(n, col=c("red","blue","green"), main="Tamaño del cuerpo")
 
 # Diagrama de sectores
-pie(X, labels=names(X), col=topo.colors(3))
-legend("topleft", legend=levels(diabetes$frame), fill=topo.colors(3))
+pie(n, col=c("red","blue","green"), main="Tamaño del cuerpo")
 ```
 
 ## 1.7 Calcula la moda de la variable `frame`. ¿Qué significa?
+
+- Moda: `medium`
+- **Intepretación**: La mayoría de los pacientes tienen tamaño del cuerpo mediano
 
 ## 1.8 ¿Qué representaciones gráficas te parecen adecuadas para la variable `chol`?
 
 ## 1.9 Realiza un histograma y un diagrama de cajas de la variable `chol`. ¿Qué información obtienes de ellos?
 
-```{r include=FALSE}
-par(mfrow=c(1,2),pty="s")
+```{r include=TRUE}
+par(mfrow=c(1,2))
 
-hist(diabetes$chol, nclass="scott", col="cyan", main="Histograma", xlab="Colesterol")
-
-boxplot(diabetes$chol, col="pink", main="Diagrama de caja", xlab="Colesterol")
+hist(diabetes$chol, main="Histograma", xlab="Colesterol")
+boxplot(diabetes$chol, main="Diagrama de caja", xlab="Colesterol")
 ```
 
 ## 1.10 A la vista del diagrama de cajas y del histograma de la variable `chol`, qué puedes decir acerca de su simetría? ¿Qué crees que será mayor, la media o la mediana?
 
 ## 1.11 Calcula el coeficiente de asimetría, la media y la mediana de la variable `chol`.
 
-```{r include=FALSE}
-summary(diabetes$chol)
-
+```{r include=TRUE}
 library(PASWR2)
 eda(diabetes$chol)
 ```
+
+- Coeficiente de asimetria: 0.924
+- **Intepretación**: Como el coeficiente es positivo, la distribución de la variable colesterol muestra una asimetría hacia la derecha. Es decir, los niveles de colesterol por encima de la media (207.85 mg/dL) están más dispersos que los valores por debajo de ella.
+
+- Mediana: 204 mg/dl
+- **Intepretación**: La mitad de los pacientes tienen un colesterol (inferior a) menor o igual a 204 mg/dl
+
+- Percentil 75 (Cuartil 3): 230 mg/dl
+- **Intepretación**: El 75% de los paciente tiene un colesterol de 230 mg/dl o menos.
 
 ## 1.12 Calcula el mínimo, el máximo, los cuartiles y la desviación típica de la variable `chol`. ¿Entre qué valores se encuentra el 25% de las personas con el colesterol más alto? ¿Y el 75% de las personas con el colesterol más bajo? ¿Qué puedes decir acerca de la dispersión de la variable?¿ Dónde hay más dispersión, en el 25% de las personas con mayor colesterol o en el 25% de las personas con colesterol más bajo?
 
 ## 1.13 Calcula el coeficiente de curtosis de la variable `chol`. ¿Qué indica?
 
+- Curtosis: 2.558
+- **Intepretación**: Como la curtosis es positiva, la distribución de la variable colesterol muestra una mayor concentración en torno a la media (207.85 mg/dL) que una distribución normal.
+
 ## 1.14 Según el diagrama de cajas, ¿existe alguna observación atípica? ¿Alguna de ellas es un valor extremo?
 
-```{r include=FALSE}
+```{r include=TRUE}
 b <- boxplot(diabetes$chol)
-
 b$out
 
 ## Para calcular valores extremos, debemos tipificar la variable ##
-z.chol <- (diabetes$chol-mean(diabetes$chol))/sd(diabetes$chol)
+diabetes$Z.chol <- (diabetes$chol-mean(diabetes$chol))/sd(diabetes$chol)
 
-pos <- which(z.chol< -3 | z.chol>3)
-diabetes$chol[pos]
+pos <- which(diabetes$Z.chol< -3 | diabetes$Z.chol>3)
+diabetes[pos,]
 ```
+
+- Los valores de colesterol 443, 404, 347 y 342 mg/dL son valores extremos.
 
 ## 1.15 ¿Cuántos hombres y cuántas mujeres hay en la muestra?
 
-```{r include=FALSE}
+```{r include=TRUE}
 table(diabetes$gender)
 ```
 
 ## 1.16 ¿Cuántas personas residen en Buckingham? ¿Cuántas en Louisa?
 
-```{r include=FALSE}
+```{r include=TRUE}
 table(diabetes$location)
 ```
 
@@ -160,27 +178,30 @@ table(diabetes$location)
 
 ## 1.18 Realiza un diagrama de cajas de la variable `chol` según las categorías de la variable `frame`.
 
-```{r include=FALSE}
-boxplot(chol~frame, col=cm.colors(3), data=diabetes)
+```{r include=TRUE}
+boxplot(diabetes$chol ~ diabetes$frame)
+
+# También se puede escribir como:
+boxplot(chol ~ frame, data=diabetes)
 ```
 
 ## 1.19 Realiza un diagrama de cajas de la variable `chol` según las categorías de la `frame` y la variable `gender`.
 
-```{r include=FALSE}
-boxplot(chol~frame+gender, col=cm.colors(3), data=diabetes)
+```{r include=TRUE}
+boxplot(chol ~ frame + gender, data=diabetes)
 ```
 
 ## 1.20 Calcula la media, mediana, la desviación típica y los cuartiles de la variable `chol` según las categorías de la variable `frame`?
 
-```{r include=FALSE}
+```{r include=TRUE}
 tapply(diabetes$chol, diabetes$frame, summary)
 tapply(diabetes$chol, diabetes$frame, sd)
 ```
 
 ## 1.21 Realiza un histograma de la variable `chol` según las categorías de la variable `frame` y la variable `gender`.
 
-```{r include=FALSE}
-histogram( ~ chol | frame*gender, xlab="Colesterol", type="density", data=diabetes)
+```{r include=TRUE}
+histogram( ~ chol | frame*gender, data=diabetes)
 ```
 
 ## 1.22 Calcula la media, la mediana, los cuartiles y la desviación típica de la variable `glyhb`. Explica cómo está de dispersa utilizando el histograma, el diagrama de cajas, los cuartiles y la desviación típica.
@@ -188,9 +209,9 @@ histogram( ~ chol | frame*gender, xlab="Colesterol", type="density", data=diabet
 ```{r include=FALSE}
 eda(diabetes$glyhb)
 
-par(mfrow=c(1,2),pty="s")
-hist(diabetes$glyhb, nclass="scott", col="cyan")
-boxplot(diabetes$glyhb, col="pink")
+par(mfrow=c(1,2))
+hist(diabetes$glyhb)
+boxplot(diabetes$glyhb)
 ```
 
 ## 1.23 Compara la dispersión de las variables `chol` y `glyhb`. ¿Qué variable tiene la desviación típica más alta? ¿Puedes concluir que aquella variable con la desviación típica más alta es la más dispersa? ¿Por qué? ¿Qué medida crees que es la más adecuada?
