--- a/Practica2.qmd
+++ b/Practica2.qmd
@@ -206,7 +206,7 @@ histogram( ~ chol | frame*gender, data=diabetes)
 
 ## 1.22 Calcula la media, la mediana, los cuartiles y la desviación típica de la variable `glyhb`. Explica cómo está de dispersa utilizando el histograma, el diagrama de cajas, los cuartiles y la desviación típica.
 
-```{r include=FALSE}
+```{r include=TRUE}
 eda(diabetes$glyhb)
 
 par(mfrow=c(1,2))
@@ -216,7 +216,7 @@ boxplot(diabetes$glyhb)
 
 ## 1.23 Compara la dispersión de las variables `chol` y `glyhb`. ¿Qué variable tiene la desviación típica más alta? ¿Puedes concluir que aquella variable con la desviación típica más alta es la más dispersa? ¿Por qué? ¿Qué medida crees que es la más adecuada?
 
-```{r include=FALSE}
+```{r include=TRUE}
 eda(diabetes$chol)
 eda(diabetes$glyhb)
 
@@ -229,7 +229,7 @@ CV.glyhb
 
 ## 1.24 Considera la variable `chol` por sexo. Selecciona el hombre y la mujer con mayor nivel de colesterol. ¿Cuál de los dos destaca más en comparación a la media de su grupo?
 
-```{r include=FALSE}
+```{r include=TRUE}
 pos <- which(diabetes$gender=="male")
 chol.male <- diabetes[pos,"chol"]
 
@@ -250,13 +250,13 @@ y.tipif
 
 ## 1.25 Crea una nueva variable denominada `ratioWH` definida como el cociente de la variable `waist` y la variable `hip` (waist/hip)
 
-```{r include=FALSE}
+```{r include=TRUE}
 diabetes$ratioWH <- diabetes$waist/diabetes$hip
 ```
 
 ## 1.26 Dibuja un histograma y un diagrama de cajas de la variable `ratioWH`.
 
-```{r include=FALSE}
+```{r include=TRUE}
 par(mfrow=c(1,2),pty="s")
 hist(diabetes$ratioWH,nclass="scott",col="cyan")
 boxplot(diabetes$ratioWH,col="pink")
@@ -264,7 +264,7 @@ boxplot(diabetes$ratioWH,col="pink")
 
 ## 1.27 Calcula el mínimo, el máximo, los cuartiles y la desviación típica de la variable `ratioWH`. ¿Entre qué valores se encuentra el 25% de los valores más altos? ¿Y el 75% de los valores más bajos?
 
-```{r include=FALSE}
+```{r include=TRUE}
 eda(diabetes$ratioWH)
 summary(diabetes$ratioWH)
 ```
@@ -273,40 +273,37 @@ summary(diabetes$ratioWH)
 
 ## 2.1 ¿Cuántos hombres y cuántas mujeres hay en la localización Buckingham? ¿Cuántos en Louisa?
 
-```{r include=FALSE}
+```{r include=TRUE}
 table(diabetes$gender,diabetes$location)
 ```
 
 ## 2.2 ¿Qué porcentaje de personas en la muestra tienen un body frame *small* y además son de Buckingham?
 
-```{r include=FALSE}
+```{r include=TRUE}
 X <- table(diabetes$frame,diabetes$location)
 prop.table(X)
 ```
 
 ## 2.3 Dibuja un diagrama de barras donde representes las frecuencias de la variable `location` para cada una de las categorías de la variable `frame`?
 
-```{r include=FALSE}
+```{r include=TRUE}
 X <- table(diabetes$location,diabetes$frame)
 X
 
-barplot(X, main="Barplot where location is stacked \n within levels of frame", col=topo.colors(3),legend.text=TRUE)
-barplot(t(X),main="Barplot where frame is stacked \n within levels of location", col=topo.colors(3),legend.text=TRUE)
-
-barplot(X,beside=TRUE,main="Barplot where location is stacked \n within levels of frame", col=topo.colors(3),legend.text=TRUE)
-barplot(t(X),beside=TRUE,main="Barplot where frame is grouped \n within levels of location", col=topo.colors(3),legend.text=TRUE)
+barplot(X, main="Location stacked within levels of frame", legend.text=TRUE)
+barplot(t(X), main="Frame stacked within levels of location", legend.text=TRUE)
 ```
 
 ## 2.4 Forma una tabla de doble entrada cruzando las variables `gender` y `frame`. ¿Cuántas mujeres tienen un body frame *medium*?
 
-```{r include=FALSE}
+```{r include=TRUE}
 Y <- table(diabetes$gender,diabetes$frame)
 Y  
 ```
 
 ## 2.5 Qué porcentaje de hombres tienen un body frame *large*?
 
-```{r include=FALSE}
+```{r include=TRUE}
 prop.table(Y)
 prop.table(Y,1)
 ```
@@ -325,53 +322,49 @@ Cruza las variables `gender` y `frame` y responde a las siguientes preguntas
 
 ## 3.1 Realiza un diagrama de dispersión de las variables `weight` y `waist`. ¿Crees que existe relación lineal entre ambas variables? Calcula la covarianza y el coeficiente de correlación lineal.
 
-```{r include=FALSE}
+```{r include=TRUE}
 plot(diabetes$weight,diabetes$waist)
-abline(lm(waist ~ weight, data=diabetes), col="red")
-
 cov(diabetes$weight,diabetes$waist)
 cor(diabetes$weight,diabetes$waist)
 ```
 
+- Covarianza: 194.88 (pounds*inches)
+- Correlación: 0.846 (sin unidades)
+- **Interpretación:** Dado que la covarianza es positiva, existe una relación lineal directa entre el peso y la anchura de la cintura de los pacientes. Es decir, a medida que aumenta el peso se espera que también lo haga la anchura d ela cintura. Además como la correlación está cerca del valor "1", podemos afirmar que dicha relación lineal es fuerte.
+
 ## 3.2 Realiza un diagrama de dispersión de las variables `chol` y `weight`. ¿Crees que existe relación lineal entre ambas variables? Calcula la covarianza y el coeficiente de correlación lineal.
 
-```{r include=FALSE}
+```{r include=TRUE}
 plot(diabetes$weight, diabetes$chol)
-abline(lm(chol ~ weight, data=diabetes), col="red")
-
 cov(diabetes$chol,diabetes$weight)
 cor(diabetes$chol,diabetes$weight)
 ```
 
 ## 3.3 Selecciona las personas del condado de Buckingham y realiza un diagrama de dispersión de las variables `waist` y `hip`. ¿Crees que existe relación lineal entre ambas variables? Calcula la covarianza y el coeficiente de correlación lineal.
 
-```{r include=FALSE}
+```{r include=TRUE}
 pos <- which(diabetes$location=="Buckingham")
 diabetes.B <- diabetes[pos,]
 
 plot(diabetes.B$waist,diabetes.B$hip)
-abline(lm(hip ~ waist, data=diabetes.B), col="red")
-
 cov(diabetes.B$waist,diabetes.B$hip)
 cor(diabetes.B$waist,diabetes.B$hip)
 ```
 
 ## 3.4 Selecciona las mujeres con body frame medium y realiza un diagrama de dispersión de las variables `bp.1s` y `age`. ¿Crees que existe relación lineal entre ambas variables? Calcula la covarianza y el coeficiente de correlación lineal.
 
-```{r include=FALSE}
+```{r include=TRUE}
 pos <- which(diabetes$gender=="female" & diabetes$frame =="medium")
 datos <- diabetes[pos,]
 
 plot(datos$age,datos$bp.1s)
-abline(lm(bp.1s ~ age, data=diabetes.B), col="red")
-
 cov(datos$bp.1s,datos$age)
 cor(datos$bp.1s,datos$age)
 ```
 
 ## A fancy way of visualizing correlation a matrix
 
-```{r include=FALSE}
+```{r include=TRUE}
 library(corrplot)
 
 diabetes.X <- diabetes[,c("chol","stab.glu","hdl","glyhb","age","height","weight","bp.1s","bp.1d","waist","hip")]
